Added Guitar & Drums section to About

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -229,7 +229,16 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Guitar & Drums</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">
+						Pick up your keyboard or if you prefer, connect one of those guitar controllers you can buy for almost nothing at your local gaming store.
+						Playing a plastic guitar with five buttons sure isn't like the real thing but it just happens to be a good deal easier to learn and thus a hit at your party.
+						Just make sure that the guys holding your guitar controllers allow others to play too.
+					</p>
+					<p class="text-muted">
+						Playing drums is like the real thing, 
+						especially if you happen to be lucky enough to have one of those professional MIDI drum sets.
+						For the rest of us the el cheapo band game controllers will have to do.
+					</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
