--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -246,7 +246,11 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Dance</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">
+						Let the rhythm guide your feet when you show your dance moves on a dance pad,
+						or just be a geek and use the keypad with your fingers instead.
+						The graphics ain't hot yet but nonetheless you can dance all the same.
+					</p>
                 </div>
             </div>
         </div>
