--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -266,6 +266,18 @@
 							The graphics ain't hot yet but nonetheless you can dance all the same.
 						</p>
                 </div>
+				<div class="col-md-6">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Requirements</h4>
+                    <p class="text-muted">
+						Let the rhythm guide your feet when you show your dance moves on a dance pad,
+						or just be a geek and use the keypad with your fingers instead.
+						The graphics ain't hot yet but nonetheless you can dance all the same.
+					</p>
+                </div>
 			</div>
         </div>
     </section>
