--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -261,9 +261,24 @@
 						</span>
 						<h4 class="service-heading">Features</h4>
 						<p class="text-muted">
-							Let the rhythm guide your feet when you show your dance moves on a dance pad,
-							or just be a geek and use the keypad with your fingers instead.
-							The graphics ain't hot yet but nonetheless you can dance all the same.
+							<ul class="text-muted" style="text-align:left">
+								<li>Vocals, guitars (lead/rhythm/bass), drums and dancing with multiplayer support</li>
+								<li>Extremely good singing pitch detection (usable even with laptop or webcam microphones)</li>
+								<li>Intelligent gameplay determines what the player attempted to do
+									<ul>
+										<li>Avoid accidental hammer-ons / pull-offs, among other things</li>
+										<li>No more "wtf, I didn't make any mistake there" feeling</li>
+									</ul>
+								</li>
+								<li>Controllers are autodetected (no need to configure keys)</li>
+								<li>Song formats: <a href="http://google.com/search?q=FoF+songs" target="_blank">FoF</a>,
+									<a href="http://google.com/search?q=UltraStar+songs" target="_blank">UltraStar</a>,
+									SingStar XML, <a href="http://google.com/search?q=StepMania+songs" target="_blank">StepMania</a>
+								</li>
+								<li>C++ for high performance, rapid development and solid code</li>
+								<li>OpenGL 2.1 and SVG for nice graphics</li>
+								<li>Free software, licensed under <a href="http://www.gnu.org/copyleft/gpl.html" target="_blank">GNU GPL</a> version 2 or later</li>
+							</ul>
 						</p>
                 </div>
 				<div class="col-md-6">
