Added Requirements info to About

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -260,26 +260,24 @@
 							<i class="fa fa-lock fa-stack-1x fa-inverse"></i>
 						</span>
 						<h4 class="service-heading">Features</h4>
-						<p class="text-muted">
-							<ul class="text-muted" style="text-align:left">
-								<li>Vocals, guitars (lead/rhythm/bass), drums and dancing with multiplayer support</li>
-								<li>Extremely good singing pitch detection (usable even with laptop or webcam microphones)</li>
-								<li>Intelligent gameplay determines what the player attempted to do
-									<ul>
-										<li>Avoid accidental hammer-ons / pull-offs, among other things</li>
-										<li>No more "wtf, I didn't make any mistake there" feeling</li>
-									</ul>
-								</li>
-								<li>Controllers are autodetected (no need to configure keys)</li>
-								<li>Song formats: <a href="http://google.com/search?q=FoF+songs" target="_blank">FoF</a>,
-									<a href="http://google.com/search?q=UltraStar+songs" target="_blank">UltraStar</a>,
-									SingStar XML, <a href="http://google.com/search?q=StepMania+songs" target="_blank">StepMania</a>
-								</li>
-								<li>C++ for high performance, rapid development and solid code</li>
-								<li>OpenGL 2.1 and SVG for nice graphics</li>
-								<li>Free software, licensed under <a href="http://www.gnu.org/copyleft/gpl.html" target="_blank">GNU GPL</a> version 2 or later</li>
-							</ul>
-						</p>
+						<ul class="text-muted" style="text-align:left">
+							<li>Vocals, guitars (lead/rhythm/bass), drums and dancing with multiplayer support</li>
+							<li>Extremely good singing pitch detection (usable even with laptop or webcam microphones)</li>
+							<li>Intelligent gameplay determines what the player attempted to do
+								<ul>
+									<li>Avoid accidental hammer-ons / pull-offs, among other things</li>
+									<li>No more "wtf, I didn't make any mistake there" feeling</li>
+								</ul>
+							</li>
+							<li>Controllers are autodetected (no need to configure keys)</li>
+							<li>Song formats: <a href="http://google.com/search?q=FoF+songs" target="_blank">FoF</a>,
+								<a href="http://google.com/search?q=UltraStar+songs" target="_blank">UltraStar</a>,
+								SingStar XML, <a href="http://google.com/search?q=StepMania+songs" target="_blank">StepMania</a>
+							</li>
+							<li>C++ for high performance, rapid development and solid code</li>
+							<li>OpenGL 2.1 and SVG for nice graphics</li>
+							<li>Free software, licensed under <a href="http://www.gnu.org/copyleft/gpl.html" target="_blank">GNU GPL</a> version 2 or later</li>
+						</ul>
                 </div>
 				<div class="col-md-6">
                     <span class="fa-stack fa-4x">
@@ -287,11 +285,13 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Requirements</h4>
-                    <p class="text-muted">
-						Let the rhythm guide your feet when you show your dance moves on a dance pad,
-						or just be a geek and use the keypad with your fingers instead.
-						The graphics ain't hot yet but nonetheless you can dance all the same.
-					</p>
+					<ul class="text-muted" style="text-align:left">
+						<li>Windows / Linux / OS X (porting to others should be easy)</li>
+						<li>A computer that can run 3D games (doesn't need to be fast)</li>
+						<li>Microphones for singing (any regular microphones, SingStar/other USB mics)</li>
+						<li>USB guitars and drums (Guitar Hero, Rock Band)</li>
+						<li>USB dance pad for dancing (various brands)</li>
+					</ul>
                 </div>
 			</div>
         </div>
