Changed icons to Music icons in About section

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -209,7 +209,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Vocals</h4>
                     <p class="text-muted">
@@ -226,7 +226,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Guitar & Drums</h4>
                     <p class="text-muted">
@@ -243,7 +243,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Dance</h4>
                     <p class="text-muted">
@@ -257,7 +257,7 @@
 				<div class="col-md-6">
 						<span class="fa-stack fa-4x">
 							<i class="fa fa-circle fa-stack-2x text-primary"></i>
-							<i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+							<i class="fa fa-music fa-stack-1x fa-inverse"></i>
 						</span>
 						<h4 class="service-heading">Features</h4>
 						<ul class="text-muted" style="text-align:left">
@@ -282,7 +282,7 @@
 				<div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Requirements</h4>
 					<ul class="text-muted" style="text-align:left">
