--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -205,6 +205,13 @@
                     <h3 class="section-subheading text-muted">What is Performous?</h3>
                 </div>
             </div>
+			<div class="row">
+				<div class="col-sm-6" style="float:none; margin:0 auto">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/soYIbsVmcyU?rel=0"></iframe>
+					</div>
+				</div>
+			</div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
