Added Download Section

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -196,7 +196,7 @@
         </div>
     </section>
 
-    <!-- Portfolio Grid Section -->
+    <!-- About Grid Section -->
     <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
@@ -304,7 +304,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
+    <!-- Composer Section -->
     <section id="composer">
         <div class="container">
             <div class="row">
@@ -450,7 +450,7 @@
     </section>
 
     <!-- Clients Aside -->
-    <aside class="download">
+    <section id="download">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
@@ -475,7 +475,7 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </section>
 
     <section id="contact">
         <div class="container">
