--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -452,7 +452,7 @@
     <!-- Clients Aside -->
     <section id="download">
         <div class="container">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
                         <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
@@ -473,7 +473,64 @@
                         <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
+            </div> -->
+			
+			<div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Downloads</h2>
+                    <h3 class="section-subheading text-muted">Download Performous now and start performing!</h3>
+                </div>
             </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member">
+						<a href="https://github.com/performous/performous/releases/download/1.0/Performous-1.0.exe" style="color:#333">
+							<span class="fa-stack" style="font-size:9em">
+								<i class="fa fa-circle fa-stack-2x text-primary"></i>
+								<i class="fa fa-windows fa-stack-1x fa-inverse"></i>
+							</span>
+							<h4>Windows XP or Better</h4>
+							<p class="text-muted">Take me to the download</p>
+						</a>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Larry Parker</h4>
+                        <p class="text-muted">Lead Marketer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Diana Pertersen</h4>
+                        <p class="text-muted">Lead Developer</p>
+                        <ul class="list-inline social-buttons">
+                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            </li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                </div>
+            </div>
+			
         </div>
     </section>
 
