Added Mac OS X downloads

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -484,33 +484,16 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-						<a href="https://github.com/performous/performous/releases/download/1.0/Performous-1.0.exe" style="color:#333">
-							<span class="fa-stack" style="font-size:9em">
-								<i class="fa fa-circle fa-stack-2x text-primary"></i>
-								<i class="fa fa-windows fa-stack-1x fa-inverse"></i>
-							</span>
-							<h4>Windows XP or Better</h4>
-							<p class="text-muted">Take me to the download</p>
-						</a>
+						<span class="fa-stack" style="font-size:9em">
+							<i class="fa fa-circle fa-stack-2x text-primary"></i>
+							<i class="fa fa-windows fa-stack-1x fa-inverse"></i>
+						</span>
+						<h4>Windows XP or Better</h4>
+						<a href="https://github.com/performous/performous/releases/download/1.0/Performous-1.0.exe" style="color:#333"><p class="text-muted">Take me to the download</p></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
+					<div class="team-member">
                         <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
                         <h4>Diana Pertersen</h4>
                         <p class="text-muted">Lead Developer</p>
@@ -522,6 +505,17 @@
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="team-member">
+						<span class="fa-stack" style="font-size:9em">
+							<i class="fa fa-circle fa-stack-2x text-primary"></i>
+							<i class="fa fa-apple fa-stack-1x fa-inverse"></i>
+						</span>
+						<h4>Mac OS X</h4>
+						<a href="https://github.com/performous/performous/releases/download/1.0/Performous-1.0.dmg" style="color:#333"><p class="text-muted">Take me to the download OS X 10.6 or newer</p></a>
+						<a href="https://sourceforge.net/projects/performous/files/performous/0.5.0/Performous-0.5.0.dmg/download" style="color:#333"><p class="text-muted">Take me to the download OS X 10.5 (v0.5.0)</p></a>
                     </div>
                 </div>
             </div>
