Added Linux to downloads

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -493,18 +493,14 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-					<div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
+                    <div class="team-member">
+						<span class="fa-stack" style="font-size:9em">
+							<i class="fa fa-circle fa-stack-2x text-primary"></i>
+							<i class="fa fa-linux fa-stack-1x"></i>
+						</span>
+						<h4>Linux</h4>
+						<a href="https://github.com/performous/performous/archive/1.0.tar.gz" style="color:#333"><p class="text-muted">Take me to the download</p></a>
+						<a href="https://github.com/performous/performous/wiki/Building-and-installing-from-source" style="color:#333"><p class="text-muted">How to build and install from source?</p></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
