--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -501,6 +501,8 @@
 						<h4>Linux</h4>
 						<a href="https://github.com/performous/performous/archive/1.0.tar.gz" style="color:#333"><p class="text-muted">Take me to the download</p></a>
 						<a href="https://github.com/performous/performous/wiki/Building-and-installing-from-source" style="color:#333"><p class="text-muted">How to build and install from source?</p></a>
+						<a href="git://github.com/performous/composer.git" style="color:#333"><p class="text-muted">Git repository for Composer</p></a>
+						<a href="https://github.com/performous/performous/wiki/Composer" style="color:#333"><p class="text-muted">How to build and install Composer?</p></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
@@ -517,7 +519,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">
+						If you are building Performous yourself or wish to do any development on it,
+						you should always use the git master branch rather than releases.
+						The master branch is relatively stable as all development is done in separate branches 
+						but it often contains bugfixes and improvements that haven't been released yet.
+					</p>
                 </div>
             </div>
 			
