Added Project Documentation to Project Links

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -390,12 +390,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Our Project Links</h2>
+                    <h3 class="section-subheading text-muted">If you want to help with the project these are the ways to go!</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+				<div class="col-sm-4">
+                    <div class="team-member">
+						<a href="https://github.com/performous/performous/wiki" style="color:#333">
+							<span class="fa-stack" style="font-size:9em">
+								<i class="fa fa-circle fa-stack-2x text-primary"></i>
+								<i class="fa fa-github fa-stack-1x"></i>
+							</span>
+							<h4>Project Documentation</h4>
+							<p class="text-muted">Everything about the project can be found here</p>
+						</a>
+                    </div>
+                </div>
+				
+				
+                <!-- <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
                         <h4>Kay Garland</h4>
@@ -440,7 +454,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
