--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -407,6 +407,18 @@
 						</a>
                     </div>
                 </div>
+				<div class="col-sm-4">
+                    <div class="team-member">
+						<a href="http://webchat.freenode.net/?channels=#performous" style="color:#333">
+							<span class="fa-stack" style="font-size:9em">
+								<i class="fa fa-circle fa-stack-2x text-primary"></i>
+								<i class="fa fa-wechat fa-stack-1x"></i>
+							</span>
+							<h4>Webchat</h4>
+							<p class="text-muted">Development discussions happens here</p>
+						</a>
+                    </div>
+                </div>
 				
 				
                 <!-- <div class="col-sm-4">
