--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -419,7 +419,18 @@
 						</a>
                     </div>
                 </div>
-				
+				<div class="col-sm-4">
+                    <div class="team-member">
+						<a href="https://github.com/performous/performous/issues/new" style="color:#333">
+							<span class="fa-stack" style="font-size:9em">
+								<i class="fa fa-circle fa-stack-2x text-primary"></i>
+								<i class="fa fa-github fa-stack-1x"></i>
+							</span>
+							<h4>Feedback/Bugs</h4>
+							<p class="text-muted">Feedback and bugs can be posted here</p>
+						</a>
+                    </div>
+                </div>
 				
                 <!-- <div class="col-sm-4">
                     <div class="team-member">
