--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -443,6 +443,19 @@
 						</a>
                     </div>
                 </div>
+				<div class="col-sm-4">
+                    <div class="team-member">
+						<a href="https://github.com/performous/composer" style="color:#333">
+							<span class="fa-stack" style="font-size:9em">
+								<i class="fa fa-circle fa-stack-2x text-primary"></i>
+								<i class="fa fa-github fa-stack-1x"></i>
+							</span>
+							<h4>Composer at GitHub</h4>
+							<p class="text-muted">Anything related to Composer happens here</p>
+						</a>
+                    </div>
+                </div>
+				
                 <!-- <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
