Added section about Composer

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -309,79 +309,50 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Composer</h2>
+                    <h3 class="section-subheading text-muted">What is Composer?</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+				<div class="col-sm-6" style="float:none; margin:0 auto">
+					<img src="img/composer/composer.png" class="img-responsive img-rounded" alt="Composer"/>
+					<br/>
+				</div>
             </div>
+			<div class="row text-center">
+				<div class="col-md-8" style="float:none; margin:0 auto">
+					<p>
+						Composer is a song editor for creating (and converting) notes for music games in various formats. 
+						It attempts to make the process easy by automating as much as possible while providing a simple and attractive interface to do the remaining manual work.
+					</p>
+					<p>
+						Key features of Composer include:
+						<ul style="text-align:left">
+							<li>Song pitch analysis based on the esteemed algorithms from Perfomous.</li>
+							<li>Zoomable interface to quickly get an overview or doing very precise timing.</li>
+							<li>Possibility to synthesize the notes to get a feel of their "sound".</li>
+							<li>Import/export in various formats including:
+								<ul>
+									<li>SingStar XML</li>
+									<li>UltraStar TXT</li>
+									<li>Frets on Fire MIDI</li>
+								</ul>
+							</li>
+						</ul>
+					</p>
+					<p>
+						Composer has a rather distinguished workflow: for example,
+						the lyrics are imported as a whole and each time you manually put a note in place,
+						the others automatically adjust to take use of the new information in providing a better guess of the pitch and timing.
+						In a sense, you are not actually creating a song, but fixing and tuning the result of what the computer thinks the notes should be like.
+					</p>
+					<p>
+						Downloads are available at the <a class="page-scroll" href="#download">download page</a>.
+						More information and building instructions can be found at the
+						<a href="https://github.com/performous/performous/wiki/Composer">wiki</a>.
+					</p>
+				</div>
+			</div>
         </div>
     </section>
 
