--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -495,8 +495,7 @@
 						but it often contains bugfixes and improvements that haven't been released yet.
 					</p>
                 </div>
-            </div>
-			
+            </div>			
         </div>
     </section>
 
@@ -505,7 +504,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">If you want to get in touch with us use the form below or use one of the options listed at <a class="page-scroll" href="#project">project links</a></h3>
                 </div>
             </div>
             <div class="row">
@@ -519,10 +518,6 @@
                                 </div>
                                 <div class="form-group">
                                     <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
