changed portfolio into news and service into about html/css

--- a/NewSiteConcept/index.html
+++ b/NewSiteConcept/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,7 +36,6 @@
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -49,7 +46,6 @@
                 <a class="navbar-brand page-scroll" href="#page-top">Performous</a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
@@ -75,9 +71,7 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
     </nav>
 
     <!-- Header -->
@@ -101,86 +95,86 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
+                <div class="col-md-4 col-sm-6 news-item">
+                    <a href="#newsModal1" class="news-link" data-toggle="modal">
+                        <div class="news-hover">
+                            <div class="news-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <div class="news-caption">
                         <h4>Performous 1.0 released</h4>
                         <p class="text-muted">2014-11-01</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
+                <div class="col-md-4 col-sm-6 news-item">
+                    <a href="#newsModal2" class="news-link" data-toggle="modal">
+                        <div class="news-hover">
+                            <div class="news-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <div class="news-caption">
                         <h4>Localizations needs update</h4>
                         <p class="text-muted">2013-06-17</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
+                <div class="col-md-4 col-sm-6 news-item">
+                    <a href="#newsModal3" class="news-link" data-toggle="modal">
+                        <div class="news-hover">
+                            <div class="news-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <div class="news-caption">
                         <h4>Status Update</h4>
                         <p class="text-muted">2013-05-05</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
+                <div class="col-md-4 col-sm-6 news-item">
+                    <a href="#newsModal4" class="news-link" data-toggle="modal">
+                        <div class="news-hover">
+                            <div class="news-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <div class="news-caption">
                         <h4>Status Update</h4>
                         <p class="text-muted">2012-12-17</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
+                <div class="col-md-4 col-sm-6 news-item">
+                    <a href="#newsModal5" class="news-link" data-toggle="modal">
+                        <div class="news-hover">
+                            <div class="news-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <div class="news-caption">
                         <h4>Website, Services and docs overhaul</h4>
                         <p class="text-muted">2012-11-17</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
+                <div class="col-md-4 col-sm-6 news-item">
+                    <a href="#newsModal6" class="news-link" data-toggle="modal">
+                        <div class="news-hover">
+                            <div class="news-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/news/Performous.png" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
+                    <div class="news-caption">
                         <h4>Performous 0.7 released</h4>
                         <p class="text-muted">2012-11-13</p>
                     </div>
@@ -218,7 +212,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Vocals</h4>
+                    <h4 class="about-heading">Vocals</h4>
                     <p class="text-muted">
 						Pick up your microphone and start singing.
 						The game won't just score your performance but your pitch is constantly
@@ -235,7 +229,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Guitar & Drums</h4>
+                    <h4 class="about-heading">Guitar & Drums</h4>
                     <p class="text-muted">
 						Pick up your keyboard or if you prefer, connect one of those guitar controllers you can buy for almost nothing at your local gaming store.
 						Playing a plastic guitar with five buttons sure isn't like the real thing but it just happens to be a good deal easier to learn and thus a hit at your party.
@@ -252,7 +246,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Dance</h4>
+                    <h4 class="about-heading">Dance</h4>
                     <p class="text-muted">
 						Let the rhythm guide your feet when you show your dance moves on a dance pad,
 						or just be a geek and use the keypad with your fingers instead.
@@ -266,7 +260,7 @@
 							<i class="fa fa-circle fa-stack-2x text-primary"></i>
 							<i class="fa fa-music fa-stack-1x fa-inverse"></i>
 						</span>
-						<h4 class="service-heading">Features</h4>
+						<h4 class="about-heading">Features</h4>
 						<ul class="text-muted" style="text-align:left">
 							<li>Vocals, guitars (lead/rhythm/bass), drums and dancing with multiplayer support</li>
 							<li>Extremely good singing pitch detection (usable even with laptop or webcam microphones)</li>
@@ -291,7 +285,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-music fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Requirements</h4>
+                    <h4 class="about-heading">Requirements</h4>
 					<ul class="text-muted" style="text-align:left">
 						<li>Windows / Linux / OS X (porting to others should be easy)</li>
 						<li>A computer that can run 3D games (doesn't need to be fast)</li>
@@ -562,7 +556,7 @@
     <!-- Use the modals below to showcase details about your newsitem! -->
 
     <!-- News Modal 1 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="news-modal modal fade" id="newsModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -619,7 +613,7 @@
     </div>
 
     <!-- News Modal 2 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="news-modal modal fade" id="newsModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -648,7 +642,7 @@
     </div>
 
     <!-- News Modal 3 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="news-modal modal fade" id="newsModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -697,7 +691,7 @@
     </div>
 
     <!-- News Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="news-modal modal fade" id="newsModal4" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -758,7 +752,7 @@
     </div>
 
     <!-- News Modal 5 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="news-modal modal fade" id="newsModal5" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -796,7 +790,7 @@
     </div>
 
     <!-- News Modal 6 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="news-modal modal fade" id="newsModal6" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
